--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@elastic/elasticsearch": "^8.1.0",
     "dotenv": "^16.0.0",
     "elasticsearch": "^16.7.3",
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
