--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.0",
     "elasticsearch": "^16.7.3",
     "express": "^4.18.0",
+    "multer": "^1.4.5-lts.1",
     "pug": "^3.0.2"
   },
   "devDependencies": {
